[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openhands-runner"
version = "1.0.0"
description = "Standalone service for managing OpenHands conversations"
authors = [
    {name = "OpenHands", email = "openhands@all-hands.dev"}
]
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.1",
    "httpx>=0.27.0",
    "pydantic>=2.7.3",
    "SQLAlchemy>=2.0.29",
    "psycopg2-binary>=2.9.9",
    "python-dotenv>=1.0.1",
    "alembic>=1.13.1",
]
requires-python = ">=3.11"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.27.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
]

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 88